corrections to performance estimates

--- a/appendices.tex
+++ b/appendices.tex
@@ -61,6 +61,7 @@
 
 
 \chapter{Calculations: performance evaluation}
+\label{app:perf}
 
 \lstset{captionpos=t}
 \lstinputlisting[language=Python, caption={perf\_eval.py}]{perf_eval.py}
