--- a/tables/pairing_benchmarks.tex
+++ b/tables/pairing_benchmarks.tex
@@ -3,6 +3,7 @@
 
 \begin{table}[H]
 	\begin{center}
+	\resizebox{0.68\textwidth}{!}{
 		\begin{tabular}{l|c||c|c|c}
 		Operation            		 & Notation 				     & BN254 & BN381\_1  & BN462  \\
 		\hline
@@ -14,16 +15,8 @@
 		Point doubling in $\Gone$    & $\mathbf{dbl}_{\Gone}$    &0.011 & 0.022  & 0.034  \\
 		Multiplication in $\Gone$    & $\mathbf{mul}_{\Gone}$    &1.596 & 4.581  & 9.077  \\
 		Hash to $\Gzero$             & $\mathbf{hash}_{\Gzero}$  &0.212 & 0.507  & 1.201  \\
-		Hash to $\Gone$              & $\mathbf{hash}_{\Gone}$   &3.486 & 9.93   & 21.817 \\
-%		Fr::add               & 0.002 & 0.002  & 0.002  \\
-%		Fr::mul               & 0.002 & 0.003  & 0.003  \\
-%		Fr::sqr               & 0.002 & 0.003  & 0.004  \\
-%		Fr::inv               & 0.037 & 0.062  & 0.078  \\
-%		GT::add               & 0.003 & 0.003  & 0.003  \\
-%		GT::mul               & 0.021 & 0.037  & 0.058  \\
-%		GT::sqr               & 0.014 & 0.026  & 0.04   \\
-%		GT::inv               & 0.074 & 0.131  & 0.19  
-		\end{tabular}
+		Hash to $\Gone$              & $\mathbf{hash}_{\Gone}$   &3.486 & 9.93   & 21.817 \\  
+		\end{tabular}}
 		\caption{Timing benchmarks for elliptic curve operations over three pairing-friendly curves (BN254, BN381\_1 and BN462) executed on an iPhone 7 running the MCL library \cite{MCLLib} on iOS 11.2.1. All timings are given in milliseconds. \cite{MCLBench}}
 		\label{table:benchmarks}
 	\end{center}
